[gd_scene load_steps=20 format=3 uid="uid://d3kobo5fnnu20"]

[ext_resource type="Script" path="res://World/level_1.gd" id="1_kumhe"]
[ext_resource type="Texture2D" uid="uid://bki3tmjho6ty" path="res://Assets/Sprites/TilesNonSliced.png" id="2_dc0vh"]
[ext_resource type="PackedScene" uid="uid://v64vc12e0x4e" path="res://World/next_door.tscn" id="3_r37oq"]
[ext_resource type="AudioStream" uid="uid://ecl4iyxk7g35" path="res://Assets/Audios/the-sun_medium-1-310613.mp3" id="4_13smq"]

[sub_resource type="Gradient" id="Gradient_w1880"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6qbio"]
gradient = SubResource("Gradient_w1880")
width = 16
height = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0drq7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ed50h"]
texture = ExtResource("2_dc0vh")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
4:3/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
10:6/0 = 0
11:6/0 = 0
9:6/0 = 0
8:6/0 = 0
7:6/0 = 0
6:6/0 = 0
5:6/0 = 0
4:6/0 = 0
3:6/0 = 0
2:6/0 = 0
1:6/0 = 0
0:6/0 = 0
0:5/0 = 0
0:4/0 = 0
0:3/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
11:1/0 = 0
11:2/0 = 0
11:3/0 = 0
11:4/0 = 0
11:5/0 = 0
5:5/0 = 0
4:5/0 = 0
3:5/0 = 0
2:5/0 = 0
1:4/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:3/0 = 0
2:4/0 = 0
2:3/0 = 0
6:1/0 = 0
5:1/0 = 0
10:1/0 = 0
9:1/0 = 0
8:2/0 = 0
7:2/0 = 0
8:1/0 = 0
9:2/0 = 0
7:1/0 = 0
10:2/0 = 0
10:3/0 = 0
10:4/0 = 0
9:4/0 = 0
8:4/0 = 0
8:3/0 = 0
9:3/0 = 0
7:3/0 = 0
6:3/0 = 0
6:5/0 = 0
1:5/0 = 0
3:4/0 = 0
1:3/0 = 0
4:1/0 = 0
6:2/0 = 0

[sub_resource type="TileSet" id="TileSet_rlfsw"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 7
sources/1 = SubResource("TileSetAtlasSource_ed50h")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq1mj"]
size = Vector2(172, 203)

[sub_resource type="Animation" id="Animation_76rn5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(528, 236)]
}

[sub_resource type="Animation" id="Animation_nfobp"]
resource_name = "move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(528, 236), Vector2(528, 186)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dewat"]
_data = {
"RESET": SubResource("Animation_76rn5"),
"move": SubResource("Animation_nfobp")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_sopig"]
atlas = ExtResource("2_dc0vh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncob0"]
atlas = ExtResource("2_dc0vh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2giih"]
atlas = ExtResource("2_dc0vh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv6h4"]
atlas = ExtResource("2_dc0vh")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hq5r"]
atlas = ExtResource("2_dc0vh")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_32gxr"]
atlas = ExtResource("2_dc0vh")
region = Rect2(16, 32, 16, 16)

[node name="Level2" type="Node2D"]
script = ExtResource("1_kumhe")
default_player_pos = Vector2(163, -33)

[node name="Button" type="Area2D" parent="."]
visible = false
position = Vector2(408, 378)
collision_mask = 7

[node name="Sprite2D" type="Sprite2D" parent="Button"]
texture = SubResource("GradientTexture2D_6qbio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button"]
shape = SubResource("RectangleShape2D_0drq7")
disabled = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, -100)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_rlfsw")
format = 2
layer_0/tile_data = PackedInt32Array(983040, 65537, 0, 983041, 65537, 0, 983042, 65537, 0, 983043, 65537, 0, 983044, 65537, 0, 983045, 65537, 0, 983046, 65537, 0, 983047, 65537, 0, 983048, 65537, 0, 983049, 65537, 0, 983050, 65537, 0, 983051, 65537, 0, 983052, 65537, 0, 983053, 65537, 0, 983054, 65537, 0, 983055, 65537, 0, 983056, 131073, 0, 983063, 65537, 0, 983064, 65537, 0, 983065, 65537, 0, 983066, 65537, 0, 983067, 65537, 0, 983068, 65537, 0, 983069, 65537, 0, 983070, 65537, 0, 983071, 65537, 0, 983072, 65537, 0, 983073, 65537, 0, 983074, 65537, 0, 983075, 65537, 0, 1048576, 65537, 1, 1114112, 65537, 1, 1179648, 65537, 1, 1245184, 65537, 1, 1310720, 65537, 1, 1376256, 65537, 1, 1048577, 65537, 1, 1114113, 65537, 1, 1179649, 65537, 1, 1245185, 65537, 1, 1310721, 65537, 1, 1376257, 65537, 1, 1048578, 65537, 1, 1114114, 65537, 1, 1179650, 65537, 1, 1245186, 65537, 1, 1310722, 65537, 1, 1376258, 65537, 1, 1048579, 65537, 1, 1114115, 65537, 1, 1179651, 65537, 1, 1245187, 65537, 1, 1310723, 65537, 1, 1376259, 65537, 1, 1048580, 65537, 1, 1114116, 65537, 1, 1179652, 65537, 1, 1245188, 65537, 1, 1310724, 65537, 1, 1376260, 65537, 1, 1048581, 65537, 1, 1114117, 65537, 1, 1179653, 65537, 1, 1245189, 65537, 1, 1310725, 65537, 1, 1376261, 65537, 1, 1048582, 65537, 1, 1114118, 65537, 1, 1179654, 65537, 1, 1245190, 65537, 1, 1310726, 65537, 1, 1376262, 65537, 1, 1048583, 65537, 1, 1114119, 65537, 1, 1179655, 65537, 1, 1245191, 65537, 1, 1310727, 65537, 1, 1376263, 65537, 1, 1048584, 65537, 1, 1114120, 65537, 1, 1179656, 65537, 1, 1245192, 65537, 1, 1310728, 65537, 1, 1376264, 65537, 1, 1048585, 65537, 1, 1114121, 65537, 1, 1179657, 65537, 1, 1245193, 65537, 1, 1310729, 65537, 1, 1376265, 65537, 1, 1048586, 65537, 1, 1114122, 65537, 1, 1179658, 65537, 1, 1245194, 65537, 1, 1310730, 65537, 1, 1376266, 65537, 1, 1048587, 65537, 1, 1114123, 65537, 1, 1179659, 65537, 1, 1245195, 65537, 1, 1310731, 65537, 1, 1376267, 65537, 1, 1048588, 65537, 1, 1114124, 65537, 1, 1179660, 65537, 1, 1245196, 65537, 1, 1310732, 65537, 1, 1376268, 65537, 1, 1048589, 65537, 1, 1114125, 65537, 1, 1179661, 65537, 1, 1245197, 65537, 1, 1310733, 65537, 1, 1376269, 65537, 1, 1048590, 65537, 1, 1114126, 65537, 1, 1179662, 65537, 1, 1245198, 65537, 1, 1310734, 65537, 1, 1376270, 65537, 1, 1048591, 65537, 1, 1114127, 65537, 1, 1179663, 65537, 1, 1245199, 65537, 1, 1310735, 65537, 1, 1376271, 65537, 1, 1048592, 131073, 1, 1114128, 131073, 1, 1179664, 131073, 1, 1245200, 131073, 1, 1310736, 131073, 1, 1376272, 131073, 1, 1048599, 65537, 1, 1114135, 65537, 1, 1179671, 65537, 1, 1245207, 65537, 1, 1310743, 65537, 1, 1376279, 65537, 1, 1048600, 65537, 1, 1114136, 65537, 1, 1179672, 65537, 1, 1245208, 65537, 1, 1310744, 65537, 1, 1376280, 65537, 1, 1048601, 65537, 1, 1114137, 65537, 1, 1179673, 65537, 1, 1245209, 65537, 1, 1310745, 65537, 1, 1376281, 65537, 1, 1048602, 65537, 1, 1114138, 65537, 1, 1179674, 65537, 1, 1245210, 65537, 1, 1310746, 65537, 1, 1376282, 65537, 1, 1048603, 65537, 1, 1114139, 65537, 1, 1179675, 65537, 1, 1245211, 65537, 1, 1310747, 65537, 1, 1376283, 65537, 1, 1048604, 65537, 1, 1114140, 65537, 1, 1179676, 65537, 1, 1245212, 65537, 1, 1310748, 65537, 1, 1376284, 65537, 1, 1048605, 65537, 1, 1114141, 65537, 1, 1179677, 65537, 1, 1245213, 65537, 1, 1310749, 65537, 1, 1376285, 65537, 1, 1048606, 65537, 1, 1114142, 65537, 1, 1179678, 65537, 1, 1245214, 65537, 1, 1310750, 65537, 1, 1376286, 65537, 1, 1048607, 65537, 1, 1114143, 65537, 1, 1179679, 65537, 1, 1245215, 65537, 1, 1310751, 65537, 1, 1376287, 65537, 1, 1048608, 65537, 1, 1114144, 65537, 1, 1179680, 65537, 1, 1245216, 65537, 1, 1310752, 65537, 1, 1376288, 65537, 1, 1048609, 65537, 1, 1114145, 65537, 1, 1179681, 65537, 1, 1245217, 65537, 1, 1310753, 65537, 1, 1376289, 65537, 1, 1048610, 65537, 1, 1114146, 65537, 1, 1179682, 65537, 1, 1245218, 65537, 1, 1310754, 65537, 1, 1376290, 65537, 1, 1048611, 65537, 1, 1114147, 65537, 1, 1179683, 65537, 1, 1245219, 65537, 1, 1310755, 65537, 1, 1376291, 65537, 1, 720912, 1, 2, 720913, 65537, 2, 720914, 65537, 2, 720915, 131073, 2, 655377, 65537, 0, 655378, 65537, 0, 655376, 1, 0, 655379, 131073, 0, 1048575, 65537, 0, 1048574, 65537, 0, 1114110, 65537, 1, 1179646, 65537, 1, 1245182, 65537, 1, 1310718, 65537, 1, 1376254, 65537, 1, 1441790, 65537, 1, 1114111, 65537, 1, 1179647, 65537, 1, 1245183, 65537, 1, 1310719, 65537, 1, 1376255, 65537, 1, 1441791, 65537, 1, 1048612, 65537, 1, 1114148, 65537, 1, 1179684, 65537, 1, 1245220, 65537, 1, 1310756, 65537, 1, 1376292, 65537, 1, 1048613, 65537, 1, 1114149, 65537, 1, 1179685, 65537, 1, 1245221, 65537, 1, 1310757, 65537, 1, 1376293, 65537, 1, 983076, 65537, 0, 983077, 65537, 0, 1048598, 1, 1, 1114134, 1, 1, 1179670, 1, 1, 1245206, 1, 1, 1310742, 1, 1, 1376278, 1, 1, 983062, 1, 0, 262144, 65537, 2, 196610, 131073, 1, 262146, 131073, 2, 262145, 65537, 2, 196609, 65537, 1, 196608, 65537, 1, 262152, 65537, 2, 262153, 65537, 2, 262154, 131073, 2, 196618, 65537, 1, 196617, 65537, 1, 262151, 1, 2, 196615, 1, 1, 196616, 65537, 1, 196619, 65537, 2, 196620, 65537, 2, 196621, 65537, 2, 196622, 65537, 2, 196623, 65537, 2, 196624, 65537, 2, 196625, 65537, 2, 196626, 65537, 2, 196627, 65537, 2, 196628, 65537, 2, 196629, 65537, 2, 196630, 65537, 2, 196631, 65537, 2, 196632, 65537, 2, 196633, 65537, 2, 196634, 65537, 2, 196635, 65537, 2, 196636, 65537, 2, 196637, 65537, 2, 196638, 65537, 2, 196639, 65537, 2, 196640, 65537, 2, 196641, 65537, 2, 196642, 65537, 2, 196643, 65537, 2, 196644, 65537, 2, 196645, 65537, 2, 65536, 65537, 1, 131072, 65537, 1, 65537, 65537, 1, 131073, 65537, 1, 65538, 131073, 1, 131074, 131073, 1, 65543, 1, 1, 131079, 1, 1, 65544, 65537, 1, 131080, 65537, 1, 65545, 65537, 1, 131081, 65537, 1, 65546, 65537, 1, 131082, 65537, 1, 65547, 65537, 1, 131083, 65537, 1, 65548, 65537, 1, 131084, 65537, 1, 65549, 65537, 1, 131085, 65537, 1, 65550, 65537, 1, 131086, 65537, 1, 65551, 65537, 1, 131087, 65537, 1, 65552, 65537, 1, 131088, 65537, 1, 65553, 65537, 1, 131089, 65537, 1, 65554, 65537, 1, 131090, 65537, 1, 65555, 65537, 1, 131091, 65537, 1, 65556, 65537, 1, 131092, 65537, 1, 65557, 65537, 1, 131093, 65537, 1, 65558, 65537, 1, 131094, 65537, 1, 65559, 65537, 1, 131095, 65537, 1, 65560, 65537, 1, 131096, 65537, 1, 65561, 65537, 1, 131097, 65537, 1, 65562, 65537, 1, 131098, 65537, 1, 65563, 65537, 1, 131099, 65537, 1, 65564, 65537, 1, 131100, 65537, 1, 65565, 65537, 1, 131101, 65537, 1, 65566, 65537, 1, 131102, 65537, 1, 65567, 65537, 1, 131103, 65537, 1, 65568, 65537, 1, 131104, 65537, 1, 65569, 65537, 1, 131105, 65537, 1, 65570, 65537, 1, 131106, 65537, 1, 65571, 65537, 1, 131107, 65537, 1, 65572, 65537, 1, 131108, 65537, 1, 65573, 65537, 1, 131109, 65537, 1)

[node name="LoopArea" type="Area2D" parent="."]
position = Vector2(851, 210)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoopArea"]
position = Vector2(76, 91.5)
shape = SubResource("RectangleShape2D_cq1mj")

[node name="LoopArea2" type="Area2D" parent="."]
position = Vector2(549, 617)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoopArea2"]
position = Vector2(76, 91.5)
shape = SubResource("RectangleShape2D_cq1mj")

[node name="NextDoor" parent="." instance=ExtResource("3_r37oq")]
position = Vector2(575.66, 172.515)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_13smq")
volume_db = -6.0
autoplay = true

[node name="Platform" type="StaticBody2D" parent="."]
visible = false
position = Vector2(528, 236)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform"]
libraries = {
"": SubResource("AnimationLibrary_dewat")
}

[node name="Sprite2D" type="Sprite2D" parent="Platform"]
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_sopig")

[node name="Sprite2D2" type="Sprite2D" parent="Platform"]
position = Vector2(32, 0)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_ncob0")

[node name="Sprite2D5" type="Sprite2D" parent="Platform"]
position = Vector2(64, 0)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_ncob0")

[node name="Sprite2D3" type="Sprite2D" parent="Platform"]
position = Vector2(96, 0)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_2giih")

[node name="Sprite2D4" type="Sprite2D" parent="Platform"]
position = Vector2(96, 32)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_wv6h4")

[node name="Sprite2D6" type="Sprite2D" parent="Platform"]
position = Vector2(0, 32)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_0hq5r")

[node name="Sprite2D7" type="Sprite2D" parent="Platform"]
position = Vector2(32, 32)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_32gxr")

[node name="Sprite2D8" type="Sprite2D" parent="Platform"]
position = Vector2(64, 32)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_32gxr")

[connection signal="body_entered" from="Button" to="." method="_on_button_body_entered"]
[connection signal="body_exited" from="Button" to="." method="_on_button_body_exited"]
[connection signal="body_entered" from="LoopArea" to="." method="_on_loop_area_body_entered"]
[connection signal="body_entered" from="LoopArea2" to="." method="_on_loop_area_body_entered"]
